# sanums

./: CMakeLists.txt  README.md
src/: sanums.hpp
test/: CMakeLists.txt  main.cpp
